# lzmqstatic

./: CMakeLists.txt  README.md  lzmqstatic-scm-1.rockspec
src/: lzmq.c
zeromq-4.1.0/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac
